<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LifeLine</string>
    <string name="action_settings">Settings</string>
    <string name="title_text_view">LifeLine</string>
    <string name="description_title_view">A Medical Records App</string>
    <string name="login_button">Log In</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="username_text_view">Username</string>
    <string name="password_text_view">Password</string>
    <string name="enter_profile">Enter</string>
    <string name="patient_welcome_text_view">Welcome Patient</string>
    <string name="welcome_title">Welcome</string>
    <string name="title_activity_welcome_doctor">WelcomeDoctorActivity</string>
    <string name="doctor_welcome_text_view">Welcome Doctor</string>
    <string name="title_activity_welcome_nurse">WelcomeNurseActivity</string>
    <string name="nurse_welcome_text_view">Welcome Nurse</string>
    <string name="patients_text_view">Patients</string>
    <string name="admin_login_button">Admin Login</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="cancel_button">Cancel</string>
    <string name="title_activity_admin_welcome">AdminWelcomeActivity</string>
    <string name="new_user_title_view">New User</string>
    <string name="email_text_view">Email</string>
    <string name="register_button">Register</string>
    <string name="database_enter_button">View Existing Users</string>
    <string name="role_text_view">Role</string>
    <string name="role_options_text_view">( patient / doctor / nurse)</string>
    <string name="view_own_record_button">View Record</string>
    <string name="edit_patient_record_button">Edit Record</string>
    <string name="title_activity_patient_record">PatientRecordActivity</string>
    <string name="ins_text_view">Insurance Number:</string>
    <string name="name_text_view">Name:</string>
    <string name="dob_text_view">DOB dd/mm/yyyy:</string>
    <string name="height_text_view">Height (inches):</string>
    <string name="weight_text_view">Weight (lbs):</string>
    <string name="allergies_text_view">Allergies (..,..,):</string>
    <string name="title_activity_doctor_edit_record">DoctorEditRecordActivity</string>
    <string name="edit_button">Make Changes</string>
    <string name="title_activity_nurse_edit_record">NurseEditRecordActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_npatient_record">NPatientRecordActivity</string>
    <string name="title_activity_own_record">OwnRecordActivity</string>

</resources>
