<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LifeLineActivity" >

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/description_title_view" />

    <Button
        android:id="@+id/LogInbutton"
        style="@menu/life_line"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@color/boston_university_red"
        android:text="@string/login_button"
        android:textColor="@color/alice_blue"
        android:textSize="25sp" />

    <Button
        android:id="@+id/adminLoginButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/descriptionTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/boston_university_red"
        android:text="@string/admin_login_button"
        android:textColor="@color/alice_blue"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/app_name"
        android:textSize="33sp" />

</RelativeLayout>
