<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeDoctorActivity" >

     <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/boston_university_red"
        android:gravity="center"
        android:text="@string/doctor_welcome_text_view"
        android:textColor="@color/alice_blue"
        android:textSize="22sp" />

        <Button
            android:id="@+id/editPatientRecordButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewPatientRecordButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:background="@color/boston_university_red"
            android:text="@string/edit_patient_record_button"
            android:textColor="@color/alice_blue" />

        <TextView
            android:id="@+id/welcome2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTextView"
            android:textColor="@color/boston_university_red"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:text="@string/welcome_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/viewPatientRecordButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editPatientRecordButton"
            android:layout_below="@+id/doctorPatientListSpinner"
            android:layout_marginTop="29dp"
            android:background="@color/boston_university_red"
            android:text="@string/view_own_record_button"
            android:textColor="@color/alice_blue" />

        <TextView
            android:id="@+id/usernametextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome2TextView"
            android:layout_centerHorizontal="true"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/doctorPatientListSpinner"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/welcomeTextView"
            android:layout_below="@+id/patientsTextView" />

        <TextView
            android:id="@+id/patientsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/doctorPatientListSpinner"
            android:layout_below="@+id/usernametextView1"
            android:layout_marginTop="23dp"
            android:text="@string/patients_text_view" />

</RelativeLayout>
