<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdminLoginActivity" >

    <TextView
        android:id="@+id/welcomeAdminTextView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/boston_university_red"
        android:gravity="center"
        android:text="@string/admin_login_button"
        android:textColor="@color/alice_blue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adminLoginButton"
        android:layout_below="@+id/adminLoginButton"
        android:layout_marginTop="18dp"
        android:background="@color/boston_university_red"
        android:text="@string/cancel_button"
        android:textColor="@color/alice_blue" />

    <EditText
        android:id="@+id/adminPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adminPasswordTextView"
        android:layout_below="@+id/adminPasswordTextView"
        android:background="@color/alice_blue"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/adminPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcomeAdminTextView"
        android:layout_below="@+id/welcomeAdminTextView"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="56dp"
        android:text="@string/password_text_view" />

    <Button
        android:id="@+id/adminLoginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/adminPasswordEditText"
        android:layout_below="@+id/adminPasswordEditText"
        android:layout_marginTop="77dp"
        android:background="@color/boston_university_red"
        android:text="@string/login_button"
        android:textColor="@color/alice_blue" />

</RelativeLayout>
