<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomePatientActivity" >

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/boston_university_red"
        android:gravity="center"
        android:text="@string/patient_welcome_text_view"
        android:textColor="@color/alice_blue"
        android:textSize="22sp" />

    <Button
        android:id="@+id/viewOwnRecordButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome2TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:background="@color/boston_university_red"
        android:text="@string/view_own_record_button"
        android:textColor="@color/alice_blue" />

    <TextView
        android:id="@+id/welcome2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textColor="@color/boston_university_red"
        android:text="@string/welcome_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/usernametextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome2TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>