<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almond"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DPatientRecordActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

       

        <TextView
            android:id="@+id/record2NameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text_view"
            android:textColor="@color/boston_university_red" />

        <TextView
            android:id="@+id/n2textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/insTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ins_text_view" 
                android:textColor="@color/boston_university_red"/>

            <TextView
                android:id="@+id/insNum2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ins_text_view"
                
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/dobTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob_text_view"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/boston_university_red" />

            <TextView
                android:id="@+id/text2View2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dob"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_text_view"
                android:textColor="@color/boston_university_red"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text2View4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="weight"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TextView
            android:id="@+id/hTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_text_view"
            android:textColor="@color/boston_university_red"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text2View1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="height"
            android:textAppearance="?android:attr/textAppearanceSmall" />

      


        <TextView
            android:id="@+id/allergiesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allergies_text_view"
            android:textColor="@color/boston_university_red"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/nurseEditTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="aller"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

       

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        </TableRow>

    </TableLayout>

  

</LinearLayout>

